# buildifier: disable=module-docstring
# we explicitly use platforms for //src/swift
bazel_dep(name = "platforms", version = "1.0.0")

# apple_support must be declared before rules_cc, and we use rules_cc for the c uptime target
# https://github.com/bazelbuild/rules_cc/pull/199
bazel_dep(name = "apple_support", version = "2.5.3", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_cc", version = "0.2.17")

# golang
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.26.2")

# kotlin
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_graalvm", version = "0.11.1")

# rules_graalvm hasn't yet published 0.11.2 to BCR
archive_override(
    module_name = "rules_graalvm",
    integrity = "sha256-JweZfVu+CFIYM0Q78qJpUbyj+uBbb/l8983xDK0/vCA=",
    patch_strip = 1,
    patches = [
        "//tools/patches:rules_graalvm-java_info.patch",
    ],
    strip_prefix = "rules_graalvm-7c53c1a1ddf82fd775be2fc62d22783ec2ba4326",
    urls = ["https://github.com/sgammon/rules_graalvm/archive/7c53c1a1ddf82fd775be2fc62d22783ec2ba4326.tar.gz"],
)

gvm = use_extension("@rules_graalvm//:extensions.bzl", "graalvm")

# https://www.graalvm.org/release-calendar/
gvm.graalvm(
    name = "graalvm",
    distribution = "ce",  # `oracle`, `ce`, or `community`
    java_version = "22",  # `17`, `20`, `21`, or `22` as supported by the version provided
    version = "24.0.1",  # gvm sdk version format like `24.x.x` also supported
)
use_repo(gvm, "graalvm")

register_toolchains("@graalvm//:jvm")

register_toolchains("@graalvm//:sdk")

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.github.oshi:oshi-core:6.11.1",
    ],
)
use_repo(maven, "maven")

# rust
bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//src/rs:Cargo.lock",
    manifests = ["//src/rs:Cargo.toml"],
)
use_repo(crate, "crates")

# dotnet
bazel_dep(name = "rules_dotnet", version = "0.21.5")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.100")
use_repo(
    dotnet,
    "dotnet_aarch64-apple-darwin",
    "dotnet_arm64-unknown-linux-gnu",
    "dotnet_toolchains",
    "dotnet_x86_64-apple-darwin",
    "dotnet_x86_64-unknown-linux-gnu",
)

register_toolchains("@dotnet_toolchains//:all")

# ruby
bazel_dep(name = "rules_ruby", version = "0.24.0")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    portable_ruby = True,
    version = "4.0.2",
)
ruby.bundle_fetch(
    name = "bundle",
    gem_checksums = {
        "ast-2.4.3": "954615157c1d6a382bc27d690d973195e79db7f55e9765ac7c481c60bdb4d383",
        "ffi-1.17.4": "bcd1642e06f0d16fc9e09ac6d49c3a7298b9789bcb58127302f934e437d60acf",
        "ffi-1.17.4-arm64-darwin": "19071aaf1419251b0a46852abf960e77330a3b334d13a4ab51d58b31a937001b",
        "json-2.19.3": "289b0bb53052a1fa8c34ab33cc750b659ba14a5c45f3fcf4b18762dc67c78646",
        "language_server-protocol-3.17.0.5": "fd1e39a51a28bf3eec959379985a72e296e9f9acfce46f6a79d31ca8760803cc",
        "lint_roller-1.1.0": "2c0c845b632a7d172cb849cc90c1bce937a28c5c8ccccb50dfd46a485003cc87",
        "parallel-1.27.0": "4ac151e1806b755fb4e2dc2332cbf0e54f2e24ba821ff2d3dcf86bf6dc4ae130",
        "parser-3.3.11.1": "d17ace7aabe3e72c3cc94043714be27cc6f852f104d81aa284c2281aecc65d54",
        "prism-1.9.0": "7b530c6a9f92c24300014919c9dcbc055bf4cdf51ec30aed099b06cd6674ef85",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "rainbow-3.1.1": "039491aa3a89f42efa1d6dec2fc4e62ede96eb6acd95e52f1ad581182b79bc6a",
        "regexp_parser-2.11.3": "ca13f381a173b7a93450e53459075c9b76a10433caadcb2f1180f2c741fc55a4",
        "rubocop-1.86.1": "44415f3f01d01a21e01132248d2fd0867572475b566ca188a0a42133a08d4531",
        "rubocop-ast-1.49.1": "4412f3ee70f6fe4546cc489548e0f6fcf76cafcfa80fa03af67098ffed755035",
        "ruby-progressbar-1.13.0": "80fc9c47a9b640d6834e0dc7b3c94c9df37f08cb072b7761e4a71e22cff29b33",
        "unicode-display_width-3.2.0": "0cdd96b5681a5949cdbc2c55e7b420facae74c4aaf9a9815eee1087cb1853c42",
        "unicode-emoji-4.2.0": "519e69150f75652e40bf736106cfbc8f0f73aa3fb6a65afe62fefa7f80b0f80f",
    },
    gemfile = "//src/rb:Gemfile",
    gemfile_lock = "//src/rb:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

# python
bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.15",
)

# swift
bazel_dep(name = "rules_swift", version = "3.4.1", repo_name = "build_bazel_rules_swift")

# for now we use archive_override to work around this:
# Error computing the main repository mapping: swift_argument_parser@1.3.1.2 depends on
# rules_swift@1.16.0 with compatibility level 1, but <root> depends on rules_swift@3.4.1
# with compatibility level 3 which is different
archive_override(
    module_name = "rules_swift",
    integrity = "sha256-YwnSJkdMa5KT95DT2kPTsE3Apxt1uH3zEHhxoOpZ1fY=",
    patch_strip = 1,
    patches = [
        # Based on https://github.com/bazelbuild/rules_swift/pull/706
        "//src/swift/patches:swift-static-lib.patch",
    ],
    urls = ["https://github.com/bazelbuild/rules_swift/releases/download/3.4.1/rules_swift.3.4.1.tar.gz"],
)

# zig
bazel_dep(name = "rules_zig", version = "0.12.3")

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = "0.15.2")

# formatting
# (NOTE: we set up a lot of tool-specific repos here, wondering if we may be able to move
#  these out into their own non-root modules since they are used only for formatting or linting)
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.2",
    dev_dependency = True,
)

http_archive(
    name = "swiftformat_mac",
    build_file_content = "filegroup(name = \"swiftformat_mac\", srcs=[\"swiftformat\"], visibility=[\"//visibility:public\"])",
    sha256 = "0356130b976e0cc1022dd6712da7a23319203125ba208fad9f37b06e9feca994",
    url = "https://github.com/nicklockwood/SwiftFormat/releases/download/0.61.0/swiftformat.zip",
)

http_archive(
    name = "swiftformat",
    build_file_content = "filegroup(name = \"swiftformat\", srcs=[\"swiftformat_linux\"], visibility=[\"//visibility:public\"])",
    sha256 = "43c2ff67470153e9bb96a9e7926a317e2d17988c8996a72a6e0ff211d8e8c092",
    url = "https://github.com/nicklockwood/SwiftFormat/releases/download/0.61.0/swiftformat_linux.zip",
)

# Note that we intentionally don't fetch clang-format from the llvm_toolchains repo, because the llvm archives
# are very time-consuming to download and extract.

# Pull static clang-format binaries for both platforms from the latest tagged release.
http_file(
    name = "clang_format_mac",
    executable = True,
    sha256 = "fe6b8450a8cf83de3f517e3b9a9b1bb925613e5fb59145d6d24ccca5fe17d442",
    url = "https://github.com/muttleyxd/clang-tools-static-binaries/releases/download/master-796e77c/clang-format-20_macos-arm-arm64",
)

http_file(
    name = "clang_format_linux",
    executable = True,
    sha256 = "e900c1e520b6c9b9c99e43c0f45ccd12927838741cfc60c077a33dec69bb60cc",
    url = "https://github.com/muttleyxd/clang-tools-static-binaries/releases/download/master-796e77c/clang-format-20_linux-amd64",
)

http_jar(
    name = "ktfmt",
    integrity = "sha256-85v5ofUg0n+G8r301tuyV0wF6E9lYXHtZcTlNLhrmWU=",
    url = "https://github.com/facebook/ktfmt/releases/download/v0.62/ktfmt-0.62-with-dependencies.jar",
)
