load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "uptime_darwin.go",
        "uptime_linux.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "uptime",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
