cabal-version:      3.0
name:               uptime
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Timothy Sutton
maintainer:         tim@synthist.net
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable uptime
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   exe
    default-language: Haskell2010
