load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//:__subpackages__"])

format_multirun(
    name = "format",
    c = ":clang_format",
    go = "@aspect_rules_lint//format:gofumpt",
    python = "@aspect_rules_lint//format:ruff",
    rust = "@rules_rust//rust/toolchain:current_rustfmt_toolchain",
    shell = "@aspect_rules_lint//format:shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    swift = ":swiftformat",
    yaml = "@aspect_rules_lint//format:yamlfmt",
)

# C
alias(
    name = "clang_format",
    actual = select({
        "@bazel_tools//src/conditions:darwin": ":clang_format_mac",
        "@bazel_tools//src/conditions:linux": ":clang_format_linux",
    }),
)

filegroup(
    name = "clang_format_mac",
    srcs = ["@clang_format_mac//file"],
    visibility = ["//visibility:public"],
)

# Swift
alias(
    name = "swiftformat",
    actual = select({
        "@bazel_tools//src/conditions:linux": "@swiftformat",
        "@bazel_tools//src/conditions:darwin": "@swiftformat_mac",
    }),
)
